--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
   <title>Gary Guo | Home</title>
 </head>
 
-<body class="bg-light">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top py-1">
+<body class="">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1">
     <div class="container-fluid">
       <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
@@ -65,18 +65,55 @@
   </div>
 
   <div class="about-content">
-    <div class="about-img me-2"></div>
-    <div class="about-text ms-2">
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum nemo modi eaque. Minima, eius. Ipsam, totam
-      ullam maxime mollitia sit voluptates, perferendis, minima molestiae magni ea beatae officiis saepe nostrum.
-      Dolorem vel iste labore ducimus quasi obcaecati quas vitae qui quisquam quae. Corporis hic eligendi, nostrum
-      similique soluta nesciunt atque voluptatem reiciendis incidunt, reprehenderit itaque praesentium sit, animi vel
-      totam.
-      Quibusdam totam corporis unde fuga necessitatibus excepturi enim? Sed doloremque reprehenderit libero,
-      praesentium sit nobis numquam voluptatum. Voluptatum error, reiciendis earum explicabo maiores, vel sit facere
-      modi exercitationem eaque consequatur?
+    <div class="about-img-container">
+      <h2 class="about-h1 mb-5">About Me</h2>
+      <div class="about-img"></div>
+    </div>
+    
+    <div class="about-text">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium sequi nostrum, ex mollitia in
+        rem quia atque placeat aliquam recusandae ducimus eligendi atque placeat aliquam recusandae ducimus magnam
+        asperiores tempora aperiam culpa expedita similique?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sit, quibusdam cupiditate distinctio quam ut
+        hic atque reiciendis ducimus beatae praesentium neque sapiente nisi, pariatur nostrum, aliquam molestiae illo
+        exercitationem!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat saepe, blanditiis aspernatur, enim culpa
+        atque commodi vel quod rerum, optio placeat et dolor sed minima! Tempora, eaque! Quis, laudantium aut.
     </div>
   </div>
+
+  <div class="skills-content">
+    <h2 class="skills-h1 mb-5">Skills</h2>
+    <div class="skills-logo-container">
+      <div class="skills-logo">
+        <img src="images/logos/java.png" alt="java" class="skills-img">
+        <p>Java</p> 
+      </div>
+      <div class="skills-logo">
+        <img src="images/logos/python.png" alt="python" class="skills-img">
+        <p>Python</p> 
+      </div>
+      <div class="skills-logo">
+        <img src="images/logos/javascript.png" alt="javascript" class="skills-img">
+        <p>Javascript</p> 
+      </div>
+      <div class="skills-logo">
+        <img src="images/logos/c.png" alt="c" class="skills-img">
+        <p>C</p> 
+      </div>
+      <div class="skills-logo">
+        <img src="images/logos/cpp.png" alt="cpp" class="skills-img">
+        <p>C++</p> 
+      </div>
+      <div class="skills-logo">
+        <img src="images/logos/git.png" alt="git" class="skills-img">
+        <p>Git</p> 
+      </div>
+    </div>
+
+  </div>
+
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -89,6 +126,12 @@
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
   <script src="app.js"></script>
+
+
+  <footer class="footer-container">
+    <p>Gary Guo © 2022</p>
+    <p>Design By Gary Guo</p>
+  </footer>
 </body>
 
 </html>
