--- a/home.html
+++ b/home.html
@@ -7,16 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/home.css">
   <title>Gary Guo | Home</title>
 </head>
 
-<body class="">
+<body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1">
     <div class="container-fluid">
       <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
-        GG
+        <span class="nav-colors">GG</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,10 +25,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link fs-5 fw-semibold" href="">About</a>
-          <a class="nav-link fs-5 fw-semibold" href="resume.html">Resume</a>
-          <a class="nav-link fs-5 fw-semibold" href="projects.html">Projects</a>
-          <a class="nav-link fs-5 fw-semibold" href="contact.html">Contact</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -61,10 +62,9 @@
         </a>
       </div>
     </div>
-
   </div>
 
-  <div class="about-content">
+  <div class="about-content" id="about">
     <div class="about-img-container">
       <h2 class="about-h1 mb-5">About Me</h2>
       <div class="about-img"></div>
@@ -125,12 +125,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 
 
   <footer class="footer-container">
     <p>Gary Guo © 2022</p>
-    <p>Design By Gary Guo</p>
+    <p>Design And Created By Gary Guo</p>
   </footer>
 </body>
 
