--- a/resume.html
+++ b/resume.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Gary Guo | Home</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="css/resume.css"> -->
+  <title>Gary Guo | Home</title>
 </head>
-    
-<body class="bg-light">
-    <nav class="navbar navbar-expand-lg bg navbar-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand ms-4 fs-4 fw-semibold" href="">
-            <img src="images/snail.jpg" class="me-2" width="35" height="35" alt="snail">
-            Gary Guo
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ms-auto">
-              <a class="nav-link fs-5 fw-semibold" href="">About</a>
-              <a class="nav-link fs-5 fw-semibold" href="resume.html">Resume</a>
-              <a class="nav-link fs-5 fw-semibold" href="projects.html">Projects</a>
-              <a class="nav-link fs-5 fw-semibold" href="contact.html">Contact Me</a>
-            </div>
-          </div>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
+    <div class="container-fluid">
+      <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
+        <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
+        <span class="nav-colors">GG</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
         </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
+ 
+  <!-- <script src="js/app.js"></script> -->
+
+
+  <!-- <footer class="footer-container">
+    <p>Gary Guo © 2022</p>
+    <p>Design And Created By Gary Guo</p>
+  </footer> -->
 </body>
+
 </html>
