--- a/home.html
+++ b/home.html
@@ -25,10 +25,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <h2 class="about-h1 mb-5">About Me</h2>
       <div class="about-img"></div>
     </div>
-    
+
     <div class="about-text">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium sequi nostrum, ex mollitia in
         rem quia atque placeat aliquam recusandae ducimus eligendi atque placeat aliquam recusandae ducimus magnam
@@ -87,27 +87,27 @@
     <div class="skills-logo-container">
       <div class="skills-logo">
         <img src="images/logos/java.png" alt="java" class="skills-img">
-        <p>Java</p> 
+        <p>Java</p>
       </div>
       <div class="skills-logo">
         <img src="images/logos/python.png" alt="python" class="skills-img">
-        <p>Python</p> 
+        <p>Python</p>
       </div>
       <div class="skills-logo">
         <img src="images/logos/javascript.png" alt="javascript" class="skills-img">
-        <p>Javascript</p> 
+        <p>Javascript</p>
       </div>
       <div class="skills-logo">
         <img src="images/logos/c.png" alt="c" class="skills-img">
-        <p>C</p> 
+        <p>C</p>
       </div>
       <div class="skills-logo">
         <img src="images/logos/cpp.png" alt="cpp" class="skills-img">
-        <p>C++</p> 
+        <p>C++</p>
       </div>
       <div class="skills-logo">
         <img src="images/logos/git.png" alt="git" class="skills-img">
-        <p>Git</p> 
+        <p>Git</p>
       </div>
     </div>
 
