--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
     <div class="container-fluid">
       <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
@@ -25,15 +25,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
         </div>
       </div>
     </div>
   </nav>
- 
+
   <!-- <script src="js/app.js"></script> -->
 
 
