--- a/resume.html
+++ b/resume.html
@@ -25,15 +25,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
         </div>
       </div>
     </div>
   </nav>
- 
+
   <!-- <script src="js/app.js"></script> -->
 
 
