--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
     <div class="container-fluid">
-      <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
+      <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
         <span class="nav-colors">GG</span>
       </a>
