final update (for now0

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
           <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
           <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
           <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
+          <!-- <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a> -->
         </div>
       </div>
     </div>
@@ -71,14 +71,13 @@
     </div>
 
     <div class="about-text">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam laudantium sequi nostrum, ex mollitia in
-        rem quia atque placeat aliquam recusandae ducimus eligendi atque placeat aliquam recusandae ducimus magnam
-        asperiores tempora aperiam culpa expedita similique?</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint sit, quibusdam cupiditate distinctio quam ut
-        hic atque reiciendis ducimus beatae praesentium neque sapiente nisi, pariatur nostrum, aliquam molestiae illo
-        exercitationem!</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat saepe, blanditiis aspernatur, enim culpa
-        atque commodi vel quod rerum, optio placeat et dolor sed minima! Tempora, eaque! Quis, laudantium aut.
+      <p>Hi! Welcome to my corner of the internet where I post an assortment of my personal and school projects and some
+        other stuff. My name is Gary and I'm a Computer Engineering student minoring in business at the University of
+        Washington heading into my junior year.</p>
+      <p>A little bit about me: I was born and raised in Shanghai, China but spent most of my life in the United States.
+        I'm a motivated learner, innovative thinker, and always strive for self-improvement.</p>
+      <p>I'm also currently looking for a software engineering internship for Summer 2023 so feel free to look around
+        and reach out whenever!</p>
     </div>
   </div>
 
