--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-1 nav-bg">
     <div class="container-fluid">
-      <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home">
+      <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home.html">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
         <span class="nav-colors">GG</span>
       </a>
@@ -25,18 +25,37 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto">
-          <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="home.html#about">About</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="resume.html">Resume</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="projects.html">Projects</a>
+          <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a>
         </div>
       </div>
     </div>
   </nav>
 
-  <!-- <script src="js/app.js"></script> -->
+  <form action="mailto:tianhaoguo@gmail.com">
+    <div class="mb-3">
+      <label for="exampleInputEmail1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1">
+    </div>
+    <div class="mb-3 form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
+    
   <!-- <footer class="footer-container">
     <p>Gary Guo © 2022</p>
     <p>Design And Created By Gary Guo</p>
