--- a/resume.html
+++ b/resume.html
@@ -8,12 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <!-- <link rel="stylesheet" href="css/resume.css"> -->
+  <link rel="stylesheet" href="css/resume.css">
   <title>Gary Guo | Home</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1 nav-bg">
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top py-1 nav-bg">
     <div class="container-fluid">
       <a class="navbar-brand ms-4 fs-4 fw-semibold" href="home">
         <img src="images/snail.jpg" class="me-2" width="40" height="40" alt="snail">
@@ -28,19 +28,33 @@
           <a class="nav-link fs-5 fw-normal nav-colors" href="home#about">About</a>
           <a class="nav-link fs-5 fw-normal nav-colors" href="resume">Resume</a>
           <a class="nav-link fs-5 fw-normal nav-colors" href="projects">Projects</a>
-          <a class="nav-link fs-5 fw-normal nav-colors" href="contact">Contact</a>
+          <!-- <a class="nav-link fs-5 fw-normal nav-colors" href="contact.html">Contact</a> -->
         </div>
       </div>
     </div>
   </nav>
 
-  <!-- <script src="js/app.js"></script> -->
+  <div class="resume-container">
+    <h1 class="fs-2 fw-bold resume-h1">
+      My Resume
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-file-earmark-text" viewBox="0 0 16 16">
+        <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
+        <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
+      </svg>
+    </h1>
+    <embed src="files/resume_gary_g.pdf" type="application/pdf">
+      <p><a href="files/resume_gary_g.pdf">Resume not displaying properly? Click here to view</a></p>
+     
+  </div>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+  crossorigin="anonymous"></script>
 
-
-  <!-- <footer class="footer-container">
+  <footer class="footer-container">
     <p>Gary Guo © 2022</p>
     <p>Design And Created By Gary Guo</p>
-  </footer> -->
+  </footer>
 </body>
 
 </html>
