--- a/home.html
+++ b/home.html
@@ -71,13 +71,14 @@
     </div>
 
     <div class="about-text">
-      <p>Hi! Welcome to my corner of the internet where I post an assortment of my personal and school projects and some
-        other stuff. My name is Gary and I'm a Computer Engineering student minoring in business at the University of
-        Washington heading into my junior year.</p>
-      <p>A little bit about me: I was born and raised in Shanghai, China but spent most of my life in the United States.
+      <p>Hi! My name is Gary and I'm a Computer Engineering student at the University of Washington with a minor in
+        business. I'm currently heading into my junior year and hoping to graduate in June 2024. </p>
+        Welcome to my
+        corner of the internet where I post an assortment of my personal and school projects and some
+        other stuff so feel free to take a look around and check out some of my stuff!</p>
+      <!-- <p>A little bit about me: I was born and raised in Shanghai, China but spent most of my life in the United States.
         I'm a motivated learner, innovative thinker, and always strive for self-improvement.</p>
-      <p>I'm also currently looking for a software engineering internship for Summer 2023 so feel free to look around
-        and reach out whenever!</p>
+      <p>Feel free to take a look around!</p> -->
     </div>
   </div>
 
